little changes: resolving issues